# ai-starter-community

./: .gitignore  AGENTS.md  README.md
source/: pyproject.toml
source/app/: __init__.py  main.py  render_test.html
source/app/.backup_20260514_1108/: MANIFEST.md  base.html  index.html  styles.css
source/app/.backup_20260514_1147_concept01_apply/: styles.css
source/app/.backup_20260514_1511_wrong_concept01_before_concept02_fix/: MANIFEST.md
source/tests/: conftest.py  test_account_blocks_activation.py  test_account_blocks_admin_ui.py  test_account_blocks_cabinet_ui.py  test_account_blocks_permissions.py  test_account_blocks_service.py  test_admin_access.py  test_admin_bootstrap_cli.py  test_admin_catalog_services.py  test_admin_course_export.py  test_admin_paid_access_grant.py  test_admin_paid_option_crud_ui.py  test_admin_readonly_lists.py  test_admin_role_management.py  test_admin_tariff_crud_ui.py  test_admin_tariff_option_linking_ui.py  test_admin_user_filters.py  test_admin_user_roles.py  test_auth_flow.py  test_auth_roles.py  test_cabinet_catalog_display.py  test_cabinet_paid_options.py  test_cabinet_prompts_library.py  test_catalog.py  test_clean_active_skills.py  test_context_navigation.py  test_course_authoring_skill.py  test_course_content_lesson_01.py  test_course_rendering.py  test_dair_lesson_generator_skill.py  test_email_delivery.py  test_health.py  test_landing_tariff_binding.py  test_lesson_ui_opendesign_skill.py  test_materials_flow.py  test_mblode_active_skill_complete.py  test_module_registration.py  test_routes.py  test_static_assets.py
(+102 files in other folders)
