[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-starter-community"
version = "0.1.0"
description = "Modular FastAPI scaffold for AI Starter Community"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "bcrypt>=4.1",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
app = ["**/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
